--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>fr.lteconsulting.formation</groupId>
+	<groupId>com.sopra</groupId>
 	<artifactId>formations-webapp</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
@@ -30,15 +30,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>fr.lteconsulting.formation</groupId>
-			<artifactId>formations-modele</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>fr.lteconsulting</groupId>
-			<artifactId>angular2-gwt</artifactId>
-			<version>1.7</version>
+			<groupId>com.sopra</groupId>
+	<artifactId>formations-modele</artifactId>
+	<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
